# vim-power-mode

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
autoload/: vpm.vim
include/vim_power_mode/: Particle.hpp  Window.hpp
include/vpm/: Config.hpp  Particle.hpp  Window.hpp
plugin/: active-power-mode.vim
src/: Config.cpp  Particle.cpp  Window.cpp  main.cpp
tests/: windows.cpp  x11.cpp
